build.log

> Configure project :
New Dep: net.minecraftforge:forge:1.12.2-14.23.5.2859_mapped_snapshot_20171003-1.12

> Task :compileJava
D:\CONTRACT\modularcontents\src\main\java\modularcontents\custom\recipe\ListWorkbenchRecipeManager.java:82: error: method loadRecipe in class ListWorkbenchRecipeManager cannot be applied to given types;
        PackZipUtils.loadJsonEntries(rootPacksDir, "recipes", (fileName, reader, packName) -> loadRecipe(reader, packName, fileName));
                                                                                              ^
  required: Reader,String
  found: Reader,String,String
  reason: actual and formal argument lists differ in length
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

Deprecated Gradle features were used in this build, making it incompatible with Gradle 5.0.
Use '--warning-mode all' to show the individual deprecation warnings.
See https://docs.gradle.org/4.9/userguide/command_line_interface.html#sec:command_line_warnings

BUILD FAILED in 7s
1 actionable task: 1 executed
